--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Embedded ArcGIS Dashboard</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ArcGIS Dashboard Embed</title>
     <style>
         .embed-container {
             position: relative;
             padding-bottom: 80%;
             height: 0;
+            overflow: hidden;
             max-width: 100%;
         }
         .embed-container iframe {
@@ -15,13 +18,17 @@
             left: 0;
             width: 100%;
             height: 100%;
+            border: none;
         }
     </style>
 </head>
 <body>
     <h1>My ArcGIS Dashboard</h1>
     <div class="embed-container">
-        <iframe src="https://gisanddata.maps.arcgis.com/apps/dashboards/795aa8f9ac594d299fc837f864b86437" frameborder="0" allowfullscreen></iframe>
+        <iframe 
+            src="https://gisanddata.maps.arcgis.com/apps/dashboards/96498b7cf3ab4bfb8aa7b42f65641323"
+            allowfullscreen>
+        </iframe>
     </div>
 </body>
 </html>
