--- a/index.html
+++ b/index.html
@@ -4,47 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArcGIS Dashboard Embed</title>
-
     <style>
         .embed-container {
             position: relative;
             padding-bottom: 80%;
             height: 0;
+            overflow: hidden;
             max-width: 100%;
         }
-        .embed-container iframe, 
-        .embed-container object, 
-        .embed-container embed {
+        .embed-container iframe {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-        }
-        small {
-            position: absolute;
-            z-index: 40;
-            bottom: 0;
-            margin-bottom: -15px;
+            border: none;
         }
     </style>
 </head>
 <body>
-
-    <h1>Bridges Information Dashboard</h1>
-
+    <h1>My ArcGIS Dashboard</h1>
     <div class="embed-container">
         <iframe 
-            width="500" 
-            height="400" 
-            frameborder="0" 
-            scrolling="no" 
-            marginheight="0" 
-            marginwidth="0" 
-            title="Bridges Info" 
-            src="//gisanddata.maps.arcgis.com/apps/Embed/index.html?webmap=6dd4d440a6a44b8a968d2661b8afdd40&extent=-134.1219,-0.9598,-59.1512,46.2606&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light">
+            src="https://gisanddata.maps.arcgis.com/apps/dashboards/795aa8f9ac594d299fc837f864b86437"
+            allowfullscreen>
         </iframe>
     </div>
-
 </body>
 </html>
