--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArcGIS Dashboard Embed</title>
+    <title></title>
     <style>
         .embed-container {
             position: relative;
@@ -26,7 +26,7 @@
     <h1>My ArcGIS Dashboard</h1>
     <div class="embed-container">
         <iframe 
-            src="https://gisanddata.maps.arcgis.com/apps/dashboards/795aa8f9ac594d299fc837f864b86437"
+            src="https://gisanddata.maps.arcgis.com/apps/dashboards/96498b7cf3ab4bfb8aa7b42f65641323"
             allowfullscreen>
         </iframe>
     </div>
