--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Dashboard</title>
     <style>
         .embed-container {
             position: relative;
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>My ArcGIS Dashboard</h1>
+    <h1> </h1>
     <div class="embed-container">
         <iframe 
             src="https://gisanddata.maps.arcgis.com/apps/dashboards/96498b7cf3ab4bfb8aa7b42f65641323"
