--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1> </h1>
     <div class="embed-container">
         <iframe 
-            src="https://gisanddata.maps.arcgis.com/apps/dashboards/96498b7cf3ab4bfb8aa7b42f65641323"
+            src="https://www.arcgis.com/apps/dashboards/f9bcc3a165314a5bbc1e33174ecac1e1"
             allowfullscreen>
         </iframe>
     </div>
